src/objects/Zip_to_Terr__c.object
<CustomObject>
    <description>Jagan 04/2/2017 - Created this object to hold zip to terr alignment information for all countries.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Concatenation 2 character code of country and the zip. For e.g. if the zip is 92121 for US then the external Id will be like US92121</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Zip to Terr</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>District__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Austria</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip to Terrs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>